--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Core
-version: '1.0-SNAPSHOT'
+version: '${project.version}'
 main: de.jan.rpg.core.Core
 api-version: '1.21'
 author: Jan2808
